--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "read-me-generator",
+  "name": "professional-readme-generator",
   "version": "1.0.0",
   "description": "Command line interface to create README files",
   "main": "app.js",
